--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cd client && npm install && npm run build",
+    "start": "nodemon --watch server --exec node --experimental-modules server/server.js"
   },
   "author": "Shukhrat Mamadaliev",
   "license": "ISC",
@@ -23,5 +24,9 @@
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "12.4.0",
+    "npm": "6.9.0"
   }
 }
