--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "mapbox-gl": "^2.13.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -25,6 +24,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "rsuite": "^5.31.1",
+    "sass": "^1.93.2",
     "socket.io-client": "^4.6.1",
     "swiper": "^9.1.0",
     "timeago.js": "^4.0.2",
